chore: framer-motion 추가 및 코드 스타일 통일
- framer-motion 라이브러리 추가
- main.jsx 세미콜론 추가

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "packageManager": "npm@11.6.2",
   "workspaces": [
     "apps/*"
-  ]
+  ],
+  "dependencies": {
+    "framer-motion": "^12.23.24"
+  }
 }
