--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,13 +15,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.13.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^11.0.1",
     "@babel/core": "7.28.4",
     "@babel/node": "7.28.0",
     "@babel/plugin-proposal-decorators": "7.28.0",
@@ -29,7 +34,9 @@
     "@babel/preset-env": "7.28.3",
     "@babel/register": "7.28.3",
     "@babel/runtime": "7.28.4",
-    "jest": "30.2.0",
+    "@nestjs/testing": "^11.0.1",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
     "nodemon": "3.1.10",
     "prettier": "3.6.2",
     "supertest": "7.1.4"
@@ -41,6 +48,9 @@
     ],
     "rootDir": "src",
     "testRegex": ".spec.js$",
-    "coverageDirectory": "../coverage"
+    "coverageDirectory": "../coverage",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
