chore: env example 프로덕션 추가

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,13 @@
-# Server
+# Backend
 PORT=3000
 NODE_ENV=development
+
+# Frontend
+FRONTEND_URL=http://localhost:5173
+
+# Production
+NODE_ENV=production
+FRONTEND_URL=https://yourdomain.com
 
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
@@ -9,6 +16,3 @@ OPENAI_ASSISTANT_ID=your_assistant_id
 # Spotify
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-
-# CORS
-FRONTEND_URL=http://localhost:5173
